MySQL added and user route added
