# src/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router } from 'express';
-import SystemStatusController from './components/system-status/system-status.controller';
+import SystemStatusController from '../components/system-status/system-status.controller';
+import userRoutes from './user.routes';
 
 /**
  * Here, you can register routes by instantiating the controller.
@@ -12,6 +13,7 @@ export default function registerRoutes(): Router {
 	const systemStatusController: SystemStatusController =
 		new SystemStatusController();
 	router.use('/system', systemStatusController.register());
+	router.use('/user',userRoutes);
 
 	return router;
 }
